--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>Opera of the Future | Media Lab 30</title>
     <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
     <div id="container">
@@ -53,8 +56,265 @@
         </div>
 
         <div id="sec4">
-
+            <div id="soundbites">
+                <div class="soundbite" data-src="Roberto Aimi.aiff">
+                    Roberto<br>Aimi
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Bryn Bliska.wav">
+                    Bryn<br>Bliska
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Adam Boulanger.aif">
+                    Adam<br>Boulanger
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Andy Cavatorta.wav">
+                    Andy<br>Cavatorta
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Joe Chung.aif">
+                    Joe<br>Chung
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Marc Downie.aif">
+                    Marc<br>Downie
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Eran Egozy.wav">
+                    Eran<br>Egozy
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Mike Fabio.wav">
+                    Mike<br>Fabio
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Mary Farbood.wav">
+                    Mary<br>Farbood
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Noah Feehan.wav">
+                    Noah<br>Feehan
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Seum-Lim Gan.aiff">
+                    Seum-Lim<br>Gan
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Ed Hammond.aif">
+                    Ed<br>Hammond
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Andy Hong.wav">
+                    Andy<br>Hong
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Tristan Jehan.wav">
+                    Tristan<br>Jehan
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Elly Jessop.aiff">
+                    Elly<br>Jessop
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Nick Knouf.wav">
+                    Nick<br>Knouf
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Teresa Malkauns_Alaap 008 response.wav">
+                    Teresa<br>Marrin<br>Nakra
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Teresa Malkauns_Alaap 024 response.wav">
+                    Teresa<br>Marrin<br>Nakra
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Teresa Marrin Nakra_electronicmusicguitarGreg.wav">
+                    Teresa<br>Marrin<br>Nakra
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Teresa Marrin Nakra_SG Devasthali Malkauns Alaap 009.wav">
+                    Teresa<br>Marrin<br>Nakra
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Eric Metois.mp3">
+                    Eric<br>Metois
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Will Oliver.mp3">
+                    Will<br>Oliver
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Maggie Orth.aif">
+                    Maggie<br>Orth
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Pete Rice.aiff">
+                    Pete<br>Rice
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Alex Rigopulos.wav">
+                    Alex<br>Rigopolous
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Robert Rowe.aiff">
+                    Robert<br>Rowe
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Eyal Shahar.wav">
+                    Eyal<br>Shahar
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Hugo Solis.aif">
+                    Hugo<br>Solís<br>Garcia
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Joshua Strickon.wav">
+                    Joshua<br>Strickon
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Peter Torpey.wav">
+                    Peter<br>Torpey
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Janice Wang.wav">
+                    Janice<br>Wang
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="David Waxman 1.wav">
+                    David<br>Waxman
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="David Waxman 2.wav">
+                    David<br>Waxman
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Gil Weinberg.aif">
+                    Gili<br>Weinberg
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Shahrokh Yadegari_34 second_Yadegari.wav">
+                    Sharokh<br>David<br>Yadegari
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+                <div class="soundbite" data-src="Shahrokh Yadegari_90 second_Yadegari.wav">
+                    Sharokh<br>David<br>Yadegari
+                    <div id="player">
+                        <i class="fa fa-play"></i>
+                        <i class="fa fa-pause"></i>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <footer>
+            <p>Opera of the Future at MIT Media Lab</p>
+        </footer>
     </div>
 </body>
 </html>
