List view for sounds.

--- a/index.html
+++ b/index.html
@@ -58,253 +58,325 @@
 
         <div id="sec4">
             <div id="soundbites">
-                <div class="soundbite" data-src="Roberto Aimi.aiff">
-                    Roberto<br>Aimi
+                <div class="soundbite" data-src="sounds/Roberto Aimi.aiff">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Roberto Aimi</p>
+                    <p class="years"></p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Bryn Bliska.wav">
-                    Bryn<br>Bliska
+                <div class="soundbite" data-src="sounds/Bryn Bliska.wav">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Bryn Bliska</p>
+                    <p class="years">2014</p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Adam Boulanger.aif">
-                    Adam<br>Boulanger
+                <div class="soundbite" data-src="sounds/Adam Boulanger.aif">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Adam Boulanger</p>
+                    <p class="years"></p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Andy Cavatorta.wav">
-                    Andy<br>Cavatorta
+                <div class="soundbite" data-src="sounds/Andy Cavatorta.wav">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Andy Cavatorta</p>
+                    <p class="years"></p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Joe Chung.aif">
-                    Joe<br>Chung
+                <div class="soundbite" data-src="sounds/Joe Chung.aif">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Joe Chung</p>
+                    <p class="years"></p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Marc Downie.aif">
-                    Marc<br>Downie
+                <div class="soundbite" data-src="sounds/Marc Downie.aif">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Marc Downie</p>
+                    <p class="years">1998-2005</p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Eran Egozy.wav">
-                    Eran<br>Egozy
+                <div class="soundbite" data-src="sounds/Eran Egozy.wav">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Eran Egozy</p>
+                    <p class="years">1992-1995</p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Mike Fabio.wav">
-                    Mike<br>Fabio
+                <div class="soundbite" data-src="sounds/Mike Fabio.wav">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Mike Fabio</p>
+                    <p class="years">2001-2007</p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Mary Farbood.wav">
-                    Mary<br>Farbood
+                <div class="soundbite" data-src="sounds/Mary Farbood.wav">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Mary Farbood</p>
+                    <p class="years"></p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Noah Feehan.wav">
-                    Noah<br>Feehan
+                <div class="soundbite" data-src="sounds/Noah Feehan.wav">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Noah Feehan</p>
+                    <p class="years"></p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Seum-Lim Gan.aiff">
-                    Seum-Lim<br>Gan
+                <div class="soundbite" data-src="sounds/Seum-Lim Gan.aiff">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Seum-Lim Gan</p>
+                    <p class="years">1996-1998</p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Ed Hammond.aif">
-                    Ed<br>Hammond
+                <div class="soundbite" data-src="sounds/Ed Hammond.aif">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Ed Hammond</p>
+                    <p class="years"></p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Andy Hong.wav">
-                    Andy<br>Hong
+                <div class="soundbite" data-src="sounds/Andy Hong.wav">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Andy Hong</p>
+                    <p class="years">1985-1992</p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Tristan Jehan.wav">
-                    Tristan<br>Jehan
+                <div class="soundbite" data-src="sounds/Tristan Jehan.wav">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Tristan Jehan</p>
+                    <p class="years"></p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Elly Jessop.aiff">
-                    Elly<br>Jessop
+                <div class="soundbite" data-src="sounds/Elly Jessop.aiff">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Elly Jessop</p>
+                    <p class="years"></p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Nick Knouf.wav">
-                    Nick<br>Knouf
+                <div class="soundbite" data-src="sounds/Nick Knouf.wav">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Nick Knouf</p>
+                    <p class="years">2005-2007</p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Teresa Malkauns_Alaap 008 response.wav">
-                    Teresa<br>Marrin<br>Nakra
+                <div class="soundbite" data-src="sounds/Teresa Malkauns_Alaap 008 response.wav">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Teresa Marrin Nakra</p>
+                    <p class="years">1993-2000</p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Teresa Malkauns_Alaap 024 response.wav">
-                    Teresa<br>Marrin<br>Nakra
+                <div class="soundbite" data-src="sounds/Teresa Malkauns_Alaap 024 response.wav">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Teresa Marrin Nakra</p>
+                    <p class="years">1993-2000</p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Teresa Marrin Nakra_electronicmusicguitarGreg.wav">
-                    Teresa<br>Marrin<br>Nakra
+                <div class="soundbite" data-src="sounds/Teresa Marrin Nakra_electronicmusicguitarGreg.wav">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Teresa Marrin Nakra</p>
+                    <p class="years">1993-2000</p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Teresa Marrin Nakra_SG Devasthali Malkauns Alaap 009.wav">
-                    Teresa<br>Marrin<br>Nakra
+                <div class="soundbite" data-src="sounds/Teresa Marrin Nakra_SG Devasthali Malkauns Alaap 009.wav">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Teresa Marrin Nakra</p>
+                    <p class="years">1993-2000</p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Eric Metois.mp3">
-                    Eric<br>Metois
+                <div class="soundbite" data-src="sounds/Eric Metois.mp3">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Eric Metois</p>
+                    <p class="years"></p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Will Oliver.mp3">
-                    Will<br>Oliver
+                <div class="soundbite" data-src="sounds/Will Oliver.mp3">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Will Oliver</p>
+                    <p class="years"></p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Maggie Orth.aif">
-                    Maggie<br>Orth
+                <div class="soundbite" data-src="sounds/Maggie Orth.aif">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Maggie Orth</p>
+                    <p class="years"></p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Pete Rice.aiff">
-                    Pete<br>Rice
+                <div class="soundbite" data-src="sounds/Pete Rice.aiff">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Pete Rice</p>
+                    <p class="years">1992-1998</p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Alex Rigopulos.wav">
-                    Alex<br>Rigopolous
+                <div class="soundbite" data-src="sounds/Alex Rigopulos.wav">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Alex Rigopolous</p>
+                    <p class="years">1992-1994</p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Robert Rowe.aiff">
-                    Robert<br>Rowe
+                <div class="soundbite" data-src="sounds/Robert Rowe.aiff">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Robert Rowe</p>
+                    <p class="years"></p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Eyal Shahar.wav">
-                    Eyal<br>Shahar
+                <div class="soundbite" data-src="sounds/Eyal Shahar.wav">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Eyal Shahar</p>
+                    <p class="years">2010-2012</p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Hugo Solis.aif">
-                    Hugo<br>Solís<br>Garcia
+                <div class="soundbite" data-src="sounds/Hugo Solis.aif">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Hugo Solís Garcia</p>
+                    <p class="years">2002-2004</p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Joshua Strickon.wav">
-                    Joshua<br>Strickon
+                <div class="soundbite" data-src="sounds/Joshua Strickon.wav">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Joshua Strickon</p>
+                    <p class="years">1995-2003</p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Peter Torpey.wav">
-                    Peter<br>Torpey
+                <div class="soundbite" data-src="sounds/Peter Torpey.wav">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Peter Torpey</p>
+                    <p class="years"></p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Janice Wang.wav">
-                    Janice<br>Wang
+                <div class="soundbite" data-src="sounds/Janice Wang.wav">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Janice Wang</p>
+                    <p class="years">2011-2013</p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="David Waxman 1.wav">
-                    David<br>Waxman
+                <div class="soundbite" data-src="sounds/David Waxman 1.wav">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">David Waxman</p>
+                    <p class="years">1993-1995</p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="David Waxman 2.wav">
-                    David<br>Waxman
+                <div class="soundbite" data-src="sounds/David Waxman 2.wav">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">David Waxman</p>
+                    <p class="years">1993-1995</p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Gil Weinberg.aif">
-                    Gili<br>Weinberg
+                <div class="soundbite" data-src="sounds/Gil Weinberg.aif">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Gili Weinberg</p>
+                    <p class="years"></p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Shahrokh Yadegari_34 second_Yadegari.wav">
-                    Sharokh<br>David<br>Yadegari
+                <div class="soundbite" data-src="sounds/Shahrokh Yadegari_34 second_Yadegari.wav">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Sharokh David Yadegari</p>
+                    <p class="years">1990-1992</p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
                     </div>
                 </div>
-                <div class="soundbite" data-src="Shahrokh Yadegari_90 second_Yadegari.wav">
-                    Sharokh<br>David<br>Yadegari
+                <div class="soundbite" data-src="sounds/Shahrokh Yadegari_90 second_Yadegari.wav">
+                    <p class="title">Some Random Title</p>
+                    <p class="author">Sharokh David Yadegari</p>
+                    <p class="years">1990-1992</p>
                     <div id="player">
                         <i class="fa fa-play"></i>
                         <i class="fa fa-pause"></i>
