Texts and videos.

--- a/index.html
+++ b/index.html
@@ -15,45 +15,25 @@
             <img id="logo" src="images/logo.png">
             <h1>Opera of the Future 30</h1>
 
-            <p id="intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p id="intro">In celebration of the 30th anniversary of the MIT Media Lab, Tod Machover set out to discover the sound(s) of his Opera of the Future group past and present.  30 sounds from 30 alumni over the past 30 years transformed into 3 x 30-second vignettes by Tod and his current students.  30-30-30. </p>
         </header>
 
         <div id="sec1">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Tod asked 30 Opera of the Future alumni to create a personal sound from 1-to-30 seconds representing how they hear the world and reflecting something about their experience at – and feeling about – the Media Lab. The video to the right is a compilation of 1-second excerpts from each of the submitted sounds. </p>
 
-            <iframe src="https://player.vimeo.com/video/145837856?title=0&byline=0&portrait=0" width="500" height="321" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <iframe src="https://player.vimeo.com/video/146855974?title=0&byline=0&portrait=0" width="500" height="321" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
 
         <div id="sec2">
-            <iframe src="https://player.vimeo.com/video/145837856?color=ffffff&title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <iframe src="https://player.vimeo.com/video/146855975?color=ffffff&title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Tod handed over all of the alumni sounds over to his current Opera of the Future students to hack, mix, and match. They analyzed the audio, devised ways identify the differences and pull out the similarities across the sounds, and mapped these parameters to physical devices which they “played” with Tod captured in this 30-second whirlwind video. </p>
         </div>
 
         <div id="sec3">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>As the final homage to Opera of the Future past and present, Tod and his current students sat down in the studio to make an extra special mix of all of the alumni sounds received. </p>
 
-            <iframe src="https://player.vimeo.com/video/145837856?title=0&byline=0&portrait=0" width="500" height="321" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <iframe src="https://player.vimeo.com/video/146855972?title=0&byline=0&portrait=0" width="500" height="321" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
 
         <div id="sec4">
