--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <div id="container">
         <header>
             <img id="ml_logo" src="images/ml_logo.png">
-            <img id="logo" src="images/logo.png">
-            <h1>Opera of the Future 30</h1>
+            <img id="logo" src="images/ml_30.png">
+            <h1>Opera of the Future @ ML30</h1>
 
             <p id="intro">In celebration of the 30th anniversary of the MIT Media Lab, Tod Machover set out to discover the sound(s) of his Opera of the Future group past and present.  30 sounds from 30 alumni over the past 30 years transformed into 3 x 30-second vignettes by Tod and his current students.  30-30-30. </p>
         </header>
 
         <div id="sec1">
-            <p>Tod asked 30 Opera of the Future alumni to create a personal sound from 1-to-30 seconds representing how they hear the world and reflecting something about their experience at – and feeling about – the Media Lab. The video to the right is a compilation of 1-second excerpts from each of the submitted sounds. </p>
+            <p><br>Tod asked 30 Opera of the Future alumni to create a personal sound from 1-to-30 seconds representing how they hear the world and reflecting something about their experience at – and feeling about – the Media Lab. The video to the right is a compilation of 1-second excerpts from each of the submitted sounds. </p>
 
             <iframe src="https://player.vimeo.com/video/146855974?title=0&byline=0&portrait=0" width="500" height="321" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
@@ -31,12 +31,14 @@
         </div>
 
         <div id="sec3">
-            <p>As the final homage to Opera of the Future past and present, Tod and his current students sat down in the studio to make an extra special mix of all of the alumni sounds received. </p>
+            <p><br><br>As the final homage to Opera of the Future past and present, Tod and his current students sat down in the studio to make an extra special mix of all of the alumni sounds received. </p>
 
             <iframe src="https://player.vimeo.com/video/146855972?title=0&byline=0&portrait=0" width="500" height="321" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
 
         <div id="sec4">
+            <p id="soundbites_intro">Individual alumni sounds in their entirety (1-to-30 seconds)</p>
+
             <div id="soundbites">
                 <div class="soundbite" data-src="sounds/Roberto Aimi.aiff">
                     <p class="title">Roberto Aimi</p>
